objects/Data_Audit__c.object
<CustomObject>
    <description>Used for ABCO MI Implementation Projects</description>
    <fields>
        <fullName>Activity_Notes__c</fullName>
        <label>Activity Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Email__c</fullName>
        <label>Assigned To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Share__c</fullName>
        <label>Assigned To (Share)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Audits</relationshipLabel>
        <relationshipName>Data_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documentation_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Checklist</label>
        <referenceTo>Implementation_Checklista__c</referenceTo>
        <relationshipLabel>Data Audits</relationshipLabel>
        <relationshipName>Data_Audits_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Templates__c</fullName>
        <label>Link to Templates</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Technical_Review__c</fullName>
        <label>Most Recent Technical Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PR_Flag__c</fullName>
        <formula>IF(Peer_Review_Required__c = TRUE,
IMAGE(&quot;https://na5.salesforce.com/servlet/servlet.ImageServer?oid=00DQ0000000DZcJ&amp;id=01570000001JoQN&quot;, &quot;PR Required&quot;, 30, 30),
IMAGE(&quot;https://na5.salesforce.com/servlet/servlet.ImageServer?oid=00DQ0000000DZcJ&amp;id=01570000001JoQD&quot;, &quot;No PR Required&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Peer Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Status__c</fullName>
        <label>Peer Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Peer_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peer Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Audits (Peer Reviewer)</relationshipLabel>
        <relationshipName>Data_Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer (1)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Audits (Reviewer (1))</relationshipLabel>
        <relationshipName>Data_Audits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer (2)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Audits (Reviewer (2))</relationshipLabel>
        <relationshipName>Data_Audits3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR_Flag__c</fullName>
        <formula>IF( Technical_Review_Required__c = TRUE,
IMAGE(&quot;https://na5.salesforce.com/servlet/servlet.ImageServer?oid=00DQ0000000DZcJ&amp;id=01570000001JoQ8&quot;, &quot;Review Required&quot;, 30, 30),
IMAGE (&quot;https://na5.salesforce.com/servlet/servlet.ImageServer?oid=00DQ0000000DZcJ&amp;id=01570000001JoQD&quot;, &quot;No Review Required&quot;, 30,30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TR Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Review_Sign_Off_Statement__c</fullName>
        <label>Technical Review Sign Off Statement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Review_Status__c</fullName>
        <label>Technical Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Audit</label>
    <nameField>
        <label>Data Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>